Set fixed height on result text so the elements don't shift anymore

--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@ h6 {
     padding: 0;
     margin: 0;
     position: relative;
-    top: 17px;
+    top: 15px;
     background-color: #8BD8BD;
-    color: #243665
+    color: #243665;
+    height:10px; 
 }
 .main-container {
     margin-top: 10px;
@@ -25,7 +26,7 @@ h6 {
     width: 320px;
     margin: 0 auto;
     border: 5px solid  #8BD8BD;
-    height: 565px;
+    height: 575px;
     border-radius: 5px;
     background-color:#8BD8BD;
 }
